# CMakeHelloWorld

./: CMakeLists.txt
contrib/hellolibrary/: CMakeLists.txt
contrib/hellolibrary/include/: hello.h
contrib/hellolibrary/src/: goodby.cpp  hello.cpp
program/: CMakeLists.txt
program/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
