CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )
PROJECT ( ProgramHello )
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:\$ORIGIN/../lib:\$ORIGIN")
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
ADD_EXECUTABLE( hello src/main.cpp )
TARGET_LINK_LIBRARIES( hello foo )
INCLUDE_DIRECTORIES( contrib/hellolibrary/include )
ADD_SUBDIRECTORY( contrib/hellolibrary )
