CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )
PROJECT ( ProgramHello )
ADD_SUBDIRECTORY( contrib/hellolibrary )
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:\$ORIGIN/../lib:\$ORIGIN")
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
ADD_EXECUTABLE( hello src/main.cpp )
TARGET_LINK_LIBRARIES( hello hello_library_shared )
TARGET_INCLUDE_DIRECTORIES( hello PRIVATE contrib/hellolibrary/include )
