CMAKE_MINIMUM_REQUIRED( VERSION 3.1.0 )

SET( MAJOR 2 )
SET( MINOR 0 )
SET( PATCH 0 )
PROJECT ( ProgramHello VERSION "${MAJOR}.${MINOR}.${PATCH}" LANGUAGES CXX )

# Set Global Options
IF( WIN32 )
    SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS /MP" )
    SET( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS /MP" )
ENDIF()

# Create a List of all Source code.  Do not use GLOB...
SET( SOURCE src/main.cpp )

ADD_EXECUTABLE( hello_program ${SOURCE} )
SET_TARGET_PROPERTIES( hello_program PROPERTIES
    OUTPUT_NAME hello
    INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:\$ORIGIN/../lib:\$ORIGIN"
    COMPILE_DEFINITIONS "MAJOR=${MAJOR};MINOR=${MINOR};PATCH=${PATCH}"
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    BUILD_WITH_INSTALL_RPATH TRUE )
TARGET_LINK_LIBRARIES( hello_program PRIVATE hello_library_shared )
TARGET_INCLUDE_DIRECTORIES( hello_program PRIVATE contrib/hellolibrary/include )

# Add Dependencies
ADD_SUBDIRECTORY( contrib/hellolibrary )
